# balatro-rl

./: .gitignore  README.md  pyproject.toml  requirements-cuda.txt
balatro_rl/agent/: eval.py  metrics_logger.py  networks.py  ppo.py  retrain.py  run.py  spec.py  train.py  value_head.py
balatro_rl/engine/: __main__.py  blinds.py  bosses.py  cards.py  consumables.py  descriptions.py  economy.py  engine.py  hands.py  packs.py  render.py  rng.py  scoring.py  shop.py  state.py  vouchers.py
balatro_rl/engine_jax/: __init__.py  config.py  curriculum.py  jokers.py  obs.py  rewards.py  scoring.py  state.py  step.py
balatro_rl/envs/: actions.py  agents.py  balatro_env.py  exposure.py  jax_vec_env.py  obs.py  rewards.py  runner.py  vec_env.py
balatro_rl/llm/: __init__.py  actions_text.py  agent.py  baseline.py  config.py  context.py  curriculum.py  policy_client.py  serialize.py  text_env.py  train_grpo.py  verl_env.py
balatro_rl/viz/: assets.py  demo_episode.py  fetch_wiki_assets.py  record.py  replay_data.py  viewer.py
configs/: balatro_grpo.yaml
docs/: RUNPOD.md  RUNPOD_AGENT_BRIEF.md  RUNPOD_M2.md
docs/experiments/: 2026-06-10-ppo-cpu-training-retro.md
docs/plans/: 2026-06-01-economy-shop.md  2026-06-01-joker-engine.md  2026-06-01-rl-env.md  2026-06-01-tier0-engine-core.md  2026-06-02-jax-agent.md  2026-06-02-observability-dashboard.md  2026-06-02-replay-viewer.md  2026-06-04-agentic-rl-m1-frozen-baseline.md  2026-06-06-jax-engine-phase01-plan.md  2026-06-09-jax-engine-phase02-plan.md
docs/reference/: economy-shop.md  jax-agent.md  jokers.md  observability.md
docs/specs/: 2026-06-01-balatro-rl-design.md  2026-06-02-card-aware-agent.md  2026-06-03-E5-widening-plan.md  2026-06-03-acquisition-systems-plan.md  2026-06-03-subsystems-plan.md  2026-06-04-agentic-rl-design.md  (+3 more)
scripts/: balatro_grpo.sh  bench_jax_engine.py  ppo_sweep.sh  ppo_sweep_pick.sh
tests/: test_smoke.py
(+126 files in other folders)
