[project]
name = "balatro-rl"
version = "0.0.1"
description = "Reinforcement learning agent for Balatro"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "jax>=0.4.30", "flax>=0.8.0", "optax>=0.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
viz = ["trackio>=0.2", "gradio>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["balatro_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
