[project]
name = "balatro-rl"
version = "0.0.1"
description = "Reinforcement learning agent for Balatro"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "jax>=0.4.30", "flax>=0.8.0", "optax>=0.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.0"]
viz = ["trackio>=0.2", "gradio>=5.0"]
# GPU (CUDA 12) — for the E5 retrain on a CUDA host (e.g. RunPod). See docs/RUNPOD.md.
# `pip install -e '.[cuda]'` pulls the CUDA jaxlib/plugin; the CPU jax extra is unaffected.
cuda = ["jax[cuda12]>=0.10,<0.11", "flax>=0.12", "optax>=0.2", "trackio>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["balatro_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (e.g. the 1000-rollout parity gate); opt in with BALATRO_RUN_SLOW=1",
]
